--- a/J02037_DAY_UU_THE/.project
+++ b/J02037_DAY_UU_THE/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Test</name>
+	<name>J02037_DAY_UU_THE</name>
 	<comment></comment>
 	<projects>
 	</projects>
